testsuite/bsc.typechecker/kind/OneArgMissingOne.bs.bsc-out.expected
checking package dependencies
compiling OneArgMissingOne.bs
Error: "OneArgMissingOne.bs", line 3, column 5: (T0025)
  The type `Bit' is applied to too few arguments.
