testsuite/bsc.typechecker/kind/OneArgMissingOne.bs
package OneArgMissingOne () where

x :: Bit
x = _

